Add automated CAD research paper system
This commit adds a complete automated system for maintaining
a curated collection of geometry-centric CAD AI research papers.

System components:
- scripts/fetch_arxiv.py: Fetch papers from arXiv
- scripts/filter_and_classify.py: Strict filtering and classification
- scripts/enrich_citations.py: Semantic Scholar citation enrichment
- scripts/build_knowledge_graph.py: Build research knowledge graph
- scripts/update_readme.py: Auto-generate README

Data structure:
- data/taxonomy.json: Domain and technique taxonomy
- data/raw_papers.json: Raw papers from arXiv
- data/new_papers.json: Filtered and classified papers
- data/seen_papers.json: Tracking processed papers
- data/enriched_papers.json: Papers with citation data
- data/knowledge_graph.json: Research knowledge graph

Automation:
- .github/workflows/auto_update.yml: Daily GitHub Actions workflow

Features:
- 100% free tools (arXiv + Semantic Scholar public APIs)
- No manual curation required
- Strict geometry-centric filtering
- Citation tracking
- Knowledge graph construction
- Automated README generation

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 venv/
 .env/
 __pycache__/
+*.pyc
 
 # VS Code
 .vscode/
@@ -10,5 +11,5 @@ __pycache__/
 .DS_Store
 Thumbs.db
 
-# Data cache
-data/*.json
+# Keep data files - they are part of the automated system
+# Data files are version controlled for the automation
